--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -1,45 +1,38 @@
-h2
-  | Edit
-  = resource_name.to_s.humanize
-= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f|
+h1.page-header Profile
+= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, role: 'form', class: 'form-horizontal' }) do |f|
   = devise_error_messages!
-  div
-    = f.label :name
-    br
-    = f.text_field :name, :autofocus => true
+  .form-group
+    = f.label :name, class: 'col-sm-4 control-label'
+    .col-sm-6
+      = f.text_field :name, autofocus: true, class: 'form-control'
   - if devise_mapping.confirmable? && resource.pending_reconfirmation?
     div
       | Currently waiting confirmation for:
       = resource.unconfirmed_email
-  div
-    = f.label :email
-    br
-    = f.email_field :email
+  .form-group
+    = f.label :email, class: 'col-sm-4 control-label'
+    .col-sm-6
+      = f.email_field :email, class: 'form-control'
   - if devise_mapping.confirmable? && resource.pending_reconfirmation?
     div
       | Currently waiting confirmation for:
       = resource.unconfirmed_email
-  div
-    = f.label :password
-    i
-      | (leave blank if you don't want to change it)
-    br
-    = f.password_field :password, :autocomplete => "off"
-  div
-    = f.label :password_confirmation
-    br
-    = f.password_field :password_confirmation
-  div
-    = f.label :current_password
-    i
-      | (we need your current password to confirm your changes)
-    br
-    = f.password_field :current_password
-  div
-    = f.submit "Update"
-h3
-  | Cancel my account
-p
-  | Unhappy?
-  = button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete
-= link_to "Back", :back
+  .form-group
+    = f.label :password, class: 'col-sm-4 control-label'
+    .col-sm-6
+      = f.password_field :password, autocomplete: 'off', class: 'form-control'
+      p.help-block leave blank if you don't want to change it
+  .form-group
+    = f.label :password_confirmation, class: 'col-sm-4 control-label'
+    .col-sm-6
+      = f.password_field :password_confirmation, class: 'form-control'
+  .form-group
+    = f.label :current_password, class: 'col-sm-4 control-label'
+    .col-sm-6
+      = f.password_field :current_password, class: 'form-control'
+      p.help-block we need your current password to confirm your changes
+  .form-group
+    .col-sm-offset-4.col-sm-6
+      = f.submit 'Update', class: 'btn btn-primary'
+h2.page-header Cancel my account
+p = button_to 'Cancel my account', registration_path(resource_name), data: { confirm: 'Are you sure?' }, method: :delete, class: 'btn btn-danger'
