--- a/app/views/devise/passwords/edit.html.slim
+++ b/app/views/devise/passwords/edit.html.slim
@@ -1,16 +1,14 @@
-h2
-  | Change your password
-= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f|
-  = devise_error_messages!
+h2.page-header Change your password
+= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put, role: 'form', class: 'form-horizontal'  }) do |f|
   = f.hidden_field :reset_password_token
-  div
-    = f.label :password, "New password"
-    br
-    = f.password_field :password, :autofocus => true
-  div
-    = f.label :password_confirmation, "Confirm new password"
-    br
-    = f.password_field :password_confirmation
-  div
-    = f.submit "Change my password"
-= render "devise/shared/links"
+  .form-group
+    = f.label :password, 'New password', class: 'col-sm-4 control-label'
+    .col-sm-6
+      = f.password_field :password, autofocus: true, class: 'form-control'
+  .form-group
+    = f.label :password_confirmation, 'Confirm new password', class: 'col-sm-4 control-label'
+    .col-sm-6
+      = f.password_field :password_confirmation, class: 'form-control'
+  .form-group
+    .col-sm-offset-4.col-sm-8
+      = f.submit 'Change my password', class: 'btn btn-primary'
