--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,23 +1,25 @@
-h2
-  | Sign up
-= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
-  = devise_error_messages!
-  div
-    = f.label :name
-    br
-    = f.text_field :name, :autofocus => true
-  div
-    = f.label :email
-    br
-    = f.email_field :email
-  div
-    = f.label :password
-    br
-    = f.password_field :password
-  div
-    = f.label :password_confirmation
-    br
-    = f.password_field :password_confirmation
-  div
-    = f.submit "Sign up"
-= render "devise/shared/links"
+h2.page-header Sign up
+= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { role: 'form', class: 'form-horizontal' }) do |f|
+  .form-group class=('has-error' if resource.errors.has_key?(:name))
+    = f.label :name, class: 'col-sm-4 control-label'
+    .col-sm-6
+      = f.text_field :name, autofocus: true, class: 'form-control'
+      p.help-block= resource.errors.get(:name).join(', ')
+  .form-group class=('has-error' if resource.errors.has_key?(:email))
+    = f.label :email, class: 'col-sm-4 control-label'
+    .col-sm-6
+      = f.email_field :email, class: 'form-control'
+      p.help-block= resource.errors.get(:email).join(', ')
+  .form-group class=('has-error' if resource.errors.has_key?(:password))
+    = f.label :password, class: 'col-sm-4 control-label'
+    .col-sm-6
+      = f.password_field :password, class: 'form-control'
+      p.help-block= resource.errors.get(:password).join(', ')
+  .form-group class=('has-error' if resource.errors.has_key?(:password_confirmation))
+    = f.label :password_confirmation, class: 'col-sm-4 control-label'
+    .col-sm-6
+      = f.password_field :password_confirmation, class: 'form-control'
+      p.help-block= resource.errors.get(:password_confirmation).join(', ')
+  .form-group
+    .col-sm-offset-4.col-sm-8
+      = f.submit "Sign up", class: 'btn btn-primary'
