--- a/app/views/layouts/session.html.slim
+++ b/app/views/layouts/session.html.slim
@@ -7,20 +7,12 @@ html
     = csrf_meta_tags
   body
     .container
-      .navbar.navbar-default role='navbar'
-        .container-fluid
-          .navbar-header
-            button type='button' class='navbar-toggle' data-toggle='collapse' data-target='.navbar-collapse'
-              span.sr-only Toggle navigation
-              span.icon-bar
-              span.icon-bar
-              span.icon-bar
-            = link_to 'Eat Together', root_path, class: 'navbar-brand'
-          .navbar-collapse.collapse
-            ul.nav.navbar-nav.navbar-right
-              li= nav_link 'Sign Up', new_user_registration_path
-              li= nav_link 'Forgot password?', new_user_password_path
-              li= nav_link 'Sign In', new_user_session_path
+      .header role='navbar'
+        ul.nav.nav-pills.pull-right
+          li= nav_link 'Sign Up', new_user_registration_path
+          li= nav_link 'Forgot password?', new_user_password_path
+          li= nav_link 'Sign In', new_user_session_path
+        h3.text-muted Eat Together
       .container-fluid
         .rows
           .col-md-8.col-md-offset-2.main
