--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -5,6 +5,7 @@ html
     = stylesheet_link_tag 'application', media: 'all', data: { turbolinks_track: true }
     = javascript_include_tag 'application', data: { turbolinks_track: true }
     = csrf_meta_tags
+    meta name='viewport' content='width=device-width, initial-scale=1.0'
   body
     .container
       .navbar.navbar-default role='navbar'
