--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -2,17 +2,30 @@
 //= require 'events'
 
 /* Space out content a bit */
-body {
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
+@media screen and (min-width: 500px) {
+  body {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
 
-/* Everything but the jumbotron gets side spacing for mobile first views */
-.header,
-.marketing,
-.footer {
-  padding-right: 15px;
-  padding-left: 15px;
+  /* Everything but the jumbotron gets side spacing for mobile first views */
+  .header,
+  .marketing,
+  .footer {
+    padding-right: 15px;
+    padding-left: 15px;
+  }
+
+  .navbar-default {
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .container {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
 
 /* Custom page header */
@@ -27,11 +40,6 @@ body {
   margin-bottom: 0;
   line-height: 40px;
 }
-.navbar-default {
-  margin-left: 15px;
-  margin-right: 15px;
-}
-
 /* Custom page footer */
 .footer {
   padding-top: 19px;
