--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -30,7 +30,7 @@ html
             ul.nav.navbar-nav.navbar-right
               li= nav_link 'Profile', edit_user_registration_path
               li= link_to 'Sign Out', destroy_user_session_path, method: :delete
-      .container-fluid
+      .container
         .rows
           .col-sm-5.col-md-4.sidebar.hidden-xs
             ul.nav.nav-pills.nav-stacked.events
