--- a/app/views/events/edit.html.slim
+++ b/app/views/events/edit.html.slim
@@ -1,5 +1,5 @@
 #event.page-header
-  ul.nav.nav-pills
-    li = nav_link 'Edit event', edit_event_path(@event)
+  ul.nav.nav-pills.navbar-right
+    = nav_link 'Edit event', edit_event_path(@event)
   h1 = @event.title
 = render 'form', participants: @event.participants_without_owner, event: @event
