--- a/app/views/events/show.html.slim
+++ b/app/views/events/show.html.slim
@@ -7,11 +7,11 @@
 
 .rows
   .col-sm-12.col-md-10.col-md-offset-1
-    ul.list-group
-      - @event.participants.each do |participant|
+    ul.list-group.balance
+      - group_by_family(@event.participants).each do |name, amount|
         li.list-group-item
-          span.badge= participant.amount
-          = participant.display_name
+          span.badge= amount
+          = name
 .rows
   .col-sm-12.col-md-10.col-md-offset-1
     table.table.table-striped
