--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,5 +1,6 @@
 //= require 'bootstrap'
 //= require 'events'
+//= require 'families'
 
 /* Space out content a bit */
 @media screen and (min-width: 500px) {
