--- a/app/views/events/show.html.slim
+++ b/app/views/events/show.html.slim
@@ -1,5 +1,6 @@
 #event.page-header
   ul.nav.nav-pills.navbar-right
+    li = link_to 'Families', event_families_path(@event)
     - if policy(@event).update?
       li = link_to 'Edit event', edit_event_path(@event)
     li = link_to 'New transaction', new_event_transaction_path(@event)
